syntax = "proto3";

package client;

option go_package = "./proto;proto";

import "google/protobuf/timestamp.proto";

service BulkaVPNService {
  rpc CreateClient (CreateClientRequest) returns (CreateClientResponse);
  rpc CreateTrialClient (CreateTrialClientRequest) returns (CreateTrialClientResponse);
  rpc SearchClients (SearchClientsRequest) returns (SearchClientsResponse);
  rpc DeleteClient (DeleteClientRequest) returns (DeleteClientResponse);
  rpc GetClient (GetClientRequest) returns (GetClientResponse);
  rpc UpdateClient (UpdateClientRequest) returns (UpdateClientResponse);
  rpc CountClients (CountClientsRequest) returns (CountClientsResponse);
}

message CreateClientRequest {
  string country_server_shadowsocks = 1;
  string country_server_vless = 2;
  int64 telegram_id = 3;
  google.protobuf.Timestamp time_left = 4;
}

message CreateClientResponse {
  string shadowsocks_vpn_config = 1;
  string vless_vpn_config = 2;
  string country_server_shadowsocks = 3;
  string country_server_vless = 4;
  google.protobuf.Timestamp time_left = 5;
}

message CreateTrialClientRequest {
  string country_server_shadowsocks = 1;
  string country_server_vless = 2;
  bool trial = 3;
  int64 telegram_id = 4;
  bool start_button = 5;
}

message CreateTrialClientResponse {
  string shadowsocks_vpn_config = 1;
  string vless_vpn_config = 2;
  string country_server_shadowsocks = 3;
  string country_server_vless = 4;
  google.protobuf.Timestamp time_left = 5;
}

message SearchClientsRequest {
  ClientFilter filter = 1;
}

message SearchClientsResponse {
  repeated Client clients = 1;
}

message DeleteClientRequest {
  string client_id = 1;
  int64 telegram_id = 2;
  bool is_trial_active_now = 3;
}

message DeleteClientResponse {
  bool deleted = 1;
}

message GetClientRequest {
  string client_id = 1;
  string shadowsocks_vpn_config = 2;
  string vless_vpn_config = 3;
  int64 telegram_id = 4;
}

message GetClientResponse {
  Client clients = 1;
}

message UpdateClientRequest {
  string country_server_shadowsocks = 1;
  string country_server_vless = 2;
  int64 telegram_id = 3;
}

message UpdateClientResponse {
  string shadowsocks_vpn_config = 1;
  string vless_vpn_config = 2;
  string country_server_shadowsocks = 3;
  string country_server_vless = 4;
}

message CountClientsRequest {
    ClientFilter filter = 1;
}

message CountClientsResponse {
  int32 count = 1;
}

message Client {
  string client_id = 1;

  int64 telegram_id = 2;

  int64 ver = 3;

  string shadowsocks_vpn_config = 4;
  string vless_vpn_config = 5;
  string country_server_shadowsocks = 6;
  string country_server_vless = 7;

  bool has_trial_been_used = 8;
  bool is_trial_active_now = 9;

  google.protobuf.Timestamp connected_since = 10;
  google.protobuf.Timestamp time_left = 11;
}

message ClientFilter {
  repeated string client_id = 1;
  repeated string shadowsocks_vpn_config = 2;
  repeated string vless_vpn_config = 3;
  string country_server_shadowsocks = 4;
  string country_server_vless = 5;
  int64 telegram_id = 6;
  bool has_trial_been_used = 7;
  bool is_trial_active_now = 8;
}